
Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------

SuRun 1.2.1.0 Beta 6 - 2011-04-14
---------------------------------
* NEW: French resources by Laurent Hilsz. Thanks!
* FIX: "(Re-)Start as Administrator" did not work with captionless Windows

SuRun 1.2.1.0 Beta 5 - 2011-03-18
---------------------------------
* FIX: Install Hardware automatically as administrator did not work in all 
    1.2.1.0 Betas.

SuRun 1.2.1.0 Beta 4 - 2011-02-24
---------------------------------
* NEW: InstallSurun and SuRun set DEP permanently ON
* NEW: All files are compiled DEP compatible and with ASLR ON

SuRun 1.2.1.0 Beta 3 - 2011-02-15
---------------------------------
* NEW: SuRun's RunAs has a new "Run elevated" Option for non restricted 
    SuRunners and Administrators

SuRun 1.2.1.0 Beta 2 - 2011-02-15
---------------------------------
* FIX: If SuRun starts %windir%\system32\cmd.exe it inserts a /D option into 
  the command line to avoid cmd from running AutoRuns

SuRun 1.2.1.0 Beta 1 - 2011-02-01
---------------------------------
* IAT-Hooks are directly loaded without a separate thread.
  When that GPF's, a thread is created to load the hooks.
* SuRunExt.Dll uses GetModuleHandleEx(GET_MODULE_HANDLE_EX_FLAG_PIN,...) to 
  prevent unloading the Dll dynamically. This effectively eliminated GPFs in 
  SuRunExt.Dll_unloaded on my Win7pro system.

SuRun 1.2.0.9 - 2010-12-23
--------------------------
* NEW: In Windows 7 Explorer can be launched with elevated rights.
* NEW: The local System is allowed as user for Backup/Restore.
* NEW: If "Start the program automagically with elevated rights." and "NEVER 